--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
  <body>
    
-   <h1> First Heading </h1>
-   <p> This room is a bit on the warm side. The <em>really</em> warm side. I <b> cannot</b> believe it.</p>
+   <h3> First Heading </h3>
+   <p> This room was a bit on the warm side. The <em>really</em> warm side. I <b> could not</b> believe it, but it's better today.</p>
    
   </body>
 </html>
