Source Control -> Commit Changes You can also add a message.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    
    <h3> First Heading </h3>
    <p> This room was a bit on the warm side. The <em>really</em> warm side. I <b> could not</b> believe it, but it's better today.</p>
+   <p> When I press the "." key, it opens the editor. Convenient tool.</p>
    
   </body>
 </html>
