--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <body>
    
    <h3> First Heading </h3>
+  <p>Hellow World! I'm <em>freezing</em> in <b> Dallas.</b></p>
    <p> This room was a bit on the warm side. The <em>really</em> warm side. I <b> could not</b> believe it, but it's better today.</p>
    <p> When I press the "." key, it opens the editor. Convenient tool.</p>
    
