I hope my Prof finds this funny.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <p>Hellow World! I'm <em>freezing</em> in <b> Dallas.</b></p>
    <p> This room was a bit on the warm side. The <em>really</em> warm side. I <b> could not</b> believe it, but it's better today.</p>
    <p> When I press the "." key, it opens the editor. Convenient tool.</p>
+   <p> I'm not sure how many sentences count as a paragraph, but my English teachers in high school asked for at least 5 sentences.</p>
+   <p> 5 Sentences isn't <em>that much</em> anyways.</p>
+   <p> In fact, I'll do two more; this one, <em>and...</em></p>
+   <p> <em><b>A DUCK WALKED UP TO A LEMONADE STAND, AND HE SAID TO THE MAN RUNNING THE STAND</b></em></p>
    
   </body>
 </html>
