I hope my Prof finds this funny

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
    <p> 5 Sentences isn't <em>that much</em> anyways.</p>
    <p> In fact, I'll do two more; this one, <em>and...</em></p>
    <p> <em><b>A DUCK WALKED UP TO A LEMONADE STAND, AND HE SAID TO THE MAN RUNNING THE STAND</b></em></p>
-   
+   <a href="https://www.youtube.com/watch?v=MtN1YnoL46Q">For Reference</a>
   </body>
 </html>
