--- a/week01/index.html
+++ b/week01/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title></title>
+<title>In the Beginning...</title>
 <body>
 <H1>"In the Beginning... was the Command Line"</H1>
 <h2>By Neal Stephenson</h2>
