--- a/week02/basic_html_website.html
+++ b/week02/basic_html_website.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>Basic Website</title>
 <head>
-    <h1>Minecraft Builds</h1>
+    <h1>Let's talk about <em>Minecraft Builds</em></h1>
 </head>
 <body>
     
