--- a/week02/index.html
+++ b/week02/index.html
@@ -4,6 +4,13 @@
     <h1>Let's talk about <em>Minecraft Builds</em></h1>
 </head>
 <body>
+<h3>What are they?</h3>
+<p>It's a fair question for those unfamiliar with Minecraft. You've certainly heard of it somewhere, whether it's your </p>
+<ul>
+    <li>little brother screaming to "Get out of my room! I'm playing Minecraft!"</li>
+    <li>dorm-mate who has no time for studying but has time for MC Championships</li>
+    <li>the Minecraft Youtubers who show you a Minecraft world that could be, but never would be, yours.</li>
     
+</ul>
 
 </body>
