--- a/week02/index.html
+++ b/week02/index.html
@@ -10,7 +10,18 @@
     <li>little brother screaming to "Get out of my room! I'm playing Minecraft!"</li>
     <li>dorm-mate who has no time for studying but has time for MC Championships</li>
     <li>the Minecraft Youtubers who show you a Minecraft world that could be, but never would be, yours.</li>
-    
 </ul>
+<p>The real question is, what <em>isn't there</em> to love about Minecraft?</p>
+<p>Let's do a top 10 list. Those are popular these days, right?</p>
+<h4>Top 10 Reasons Minecraft <b><u>BODIES</u></b> every other game out there.</h4>
+<ol>
+    <li>Minecraft has the fun of playing with Legos, going outside, and playing video games all in one.</li>
+    <li>Minecraft has an endless amount of opportunities to create and explore.</li>
+    <li>Minecraft is cheap compared to other AAA games out there. (Just $20 vs $60)</li>
+    <li>Minecraft has a fantastic online community. You can play with friends or make new ones if you'd like.</li>
+    <li>Minecraft is a base game that can be modified to play almost any other game imaginable.</li>
+</ol>
+
+<p>Ok, so just a top 5. I was starting to get bored, and if I'm the one writing this, I don't want to imagine what it's doing to <em>you</em>.</p>
 
 </body>
