--- a/week02/index.html
+++ b/week02/index.html
@@ -23,5 +23,9 @@
 </ol>
 
 <p>Ok, so just a top 5. I was starting to get bored, and if I'm the one writing this, I don't want to imagine what it's doing to <em>you</em>.</p>
+<p>Still though, I think you get the point.You've heard of Minecraft before, you've seen the articles, your friends talk about it, maybe you even play it yourself. I don't think I need to use ridiculous clickbait like</p>
+<h2><b>10 REASONS MINECRAFT IS OUT OF THIS WORLD!!!1! YOU WONT BELIEVE NUMBER 6</b></h2>
+<p>and you read it, and you <em>do</em> believe that a cheap game with free updates and low requirements would be popular amongst those with not that much money to spend on games.</p>
+<p>We don't need that kind of <a href='https://www.buzzfeed.com/'>distasteful trash</a> in our midst. *cough* *cough*</p>
 
 </body>
