--- a/week02/index.html
+++ b/week02/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <title>Basic Website</title>
+<html lang="en-US">
 <head>
-    <h1>Let's talk about <em>Minecraft Builds</em></h1>
+  <meta charset="UTF-8">
+  <title>It's my Web: Lesson 4</title>
+  <link rel="stylesheet" type="text/css" href="style.css"> 
+    <h1>Let's talk about <em>Minecraft</em></h1>
 </head>
 <body>
 <h3>What are they?</h3>
@@ -27,5 +31,6 @@
 <h2><b>10 REASONS MINECRAFT IS OUT OF THIS WORLD!!!1! YOU WONT BELIEVE NUMBER 6</b></h2>
 <p>and you read it, and you <em>do</em> believe that a cheap game with free updates and low requirements would be popular amongst those with not that much money to spend on games.</p>
 <p>We don't need that kind of <a href='https://www.buzzfeed.com/'>distasteful trash</a> in our midst. *cough* *cough*</p>
-
+<p>As far as my story with Minecraft goes, it's pretty </p>
 </body>
+</html>
