--- a/week02/index.html
+++ b/week02/index.html
@@ -31,6 +31,8 @@
 <h2><b>10 REASONS MINECRAFT IS OUT OF THIS WORLD!!!1! YOU WONT BELIEVE NUMBER 6</b></h2>
 <p>and you read it, and you <em>do</em> believe that a cheap game with free updates and low requirements would be popular amongst those with not that much money to spend on games.</p>
 <p>We don't need that kind of <a href='https://www.buzzfeed.com/'>distasteful trash</a> in our midst. *cough* *cough*</p>
-<p>As far as my story with Minecraft goes, it's pretty </p>
+<p>As far as my story with Minecraft goes, it's pretty run of the mill. I watched the Minecraft Youtubers, played in a multiplayer server with my friends, and I tried learning redstone from tutorials I couldn't keep up with.</p>
+<p>I feel quite satisfied with what I have been able to accomplish. I have built <a href="https://en.wikipedia.org/wiki/Maya_civilization#/media/File:Chichen_Itza_3.jpg">a Mayan pyramid</a>, and an <a href="https://www.models-resource.com/pc_computer/sonicheroes/model/1813/">eggfleet ship</a> from Sonic the Hedgehog.</p>
+<p>I don't yet know how to put an image in here, but as soon as I do, I'll upload pictures of my builds. They're fantastic!</p>
 </body>
 </html>
