--- a/week02/index.html
+++ b/week02/index.html
@@ -8,8 +8,8 @@
     <h1>Let's talk about <em>Minecraft</em></h1>
 </head>
 <body>
-<h3>What are they?</h3>
-<p>It's a fair question for those unfamiliar with Minecraft. You've certainly heard of it somewhere, whether it's your </p>
+<h3>What is it?</h3>
+<p>It's a fair question for those unfamiliar with Minecraft, but you've certainly heard of it somewhere, whether it's your </p>
 <ul>
     <li>little brother screaming to "Get out of my room! I'm playing Minecraft!"</li>
     <li>dorm-mate who has no time for studying but has time for MC Championships</li>
