--- a/week02/index.html
+++ b/week02/index.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title>It's my Web: Lesson 4</title>
+  <title>Let's Talk Minecraft</title>
   <link rel="stylesheet" type="text/css" href="style.css"> 
     <h1>Let's talk about <em>Minecraft</em></h1>
 </head>
