--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<title>Basic Website</title>
-<html lang="en-US">
+    <title>Website with an Image</title>
 <head>
-  <meta charset="UTF-8">
-  <title>It's my Web: Lesson 4</title>
-  <link rel="stylesheet" type="text/css" href="style.css"> 
-    <h1>Let's talk about <em>Minecraft</em></h1>
+    <h1>Here are some examples of <em>cool</em> Minecraft builds!</h1>
 </head>
 <body>
-    
+
+<ol>
+    <li>
+        <h2>Mumbo Jumbo's Hermitcraft Season 6 Mega Base!</h2>
+        <img src="https://i.ytimg.com/vi/kSBA-7MhEPY/maxresdefault.jpg"
+        alt="Mumbo Jumbo's Base" width="600">
+    </li>
+    <li>
+        <h2>Grian's Hermitcraft Season 7 Base!</h2>
+        <img src="https://i.ytimg.com/vi/mIcyDY_ERc0/maxresdefault.jpg"
+        alt="Grian's Base" width="600">
+    </li>
+    <li>
+        <h2>Belonging to <em>Your's Truly</em>, my Eggfleet Base!</h2>
+        <img src="G:\My Drive\Photos\2021-04-20_23.09.19.png"
+        alt="My Base" width="600">
+
+    </li>
+</ol>
+
+
 </body>
