--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -4,7 +4,8 @@
     <h1>Here are some examples of <em>cool</em> Minecraft builds!</h1>
 </head>
 <body>
-
+<p>Before we begin, let's make sure you'd be able to <a href="index.html">appreciate these builds.</a>
+If you're all caught up, we can get to enjoying!</p>
 <ol>
     <li>
         <h2>Mumbo Jumbo's Hermitcraft Season 6 Mega Base!</h2>
@@ -18,7 +19,7 @@
     </li>
     <li>
         <h2>Belonging to <em>Your's Truly</em>, my Eggfleet Base!</h2>
-        <img src="G:\My Drive\Photos\2021-04-20_23.09.19.png"
+        <img src="myBase.png"
         alt="My Base" width="600">
 
     </li>
