--- a/week02/index.html
+++ b/week02/index.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
-<title>Basic Website</title>
-<html lang="en-US">
+    <title>Website with an Image</title>
 <head>
-  <meta charset="UTF-8">
-  <title>Let's Talk Minecraft</title>
-  <link rel="stylesheet" type="text/css" href="style.css"> 
-    <h1>Let's talk about <em>Minecraft</em></h1>
+    <h1>Here are some examples of <em>cool</em> Minecraft builds!</h1>
 </head>
 <body>
-<h3>What is it?</h3>
-<p>It's a fair question for those unfamiliar with Minecraft, but you've certainly heard of it somewhere, whether it's your </p>
-<ul>
-    <li>little brother screaming to "Get out of my room! I'm playing Minecraft!"</li>
-    <li>dorm-mate who has no time for studying but has time for MC Championships</li>
-    <li>the Minecraft Youtubers who show you a Minecraft world that could be, but never would be, yours.</li>
-</ul>
-<p>The real question is, what <em>isn't there</em> to love about Minecraft?</p>
-<p>Let's do a top 10 list. Those are popular these days, right?</p>
-<h4>Top 10 Reasons Minecraft <b><u>BODIES</u></b> every other game out there.</h4>
+<p>Before we begin, let's make sure you'd be able to <a href="index.html">appreciate these builds.</a>
+If you're all caught up, we can get to enjoying!</p>
 <ol>
-    <li>Minecraft has the fun of playing with Legos, going outside, and playing video games all in one.</li>
-    <li>Minecraft has an endless amount of opportunities to create and explore.</li>
-    <li>Minecraft is cheap compared to other AAA games out there. (Just $20 vs $60)</li>
-    <li>Minecraft has a fantastic online community. You can play with friends or make new ones if you'd like.</li>
-    <li>Minecraft is a base game that can be modified to play almost any other game imaginable.</li>
+    <li>
+        <h2>Mumbo Jumbo's Hermitcraft Season 6 Mega Base!</h2>
+        <img src="https://i.ytimg.com/vi/kSBA-7MhEPY/maxresdefault.jpg"
+        alt="Mumbo Jumbo's Base" width="600">
+    </li>
+    <li>
+        <h2>Grian's Hermitcraft Season 7 Base!</h2>
+        <img src="https://i.ytimg.com/vi/mIcyDY_ERc0/maxresdefault.jpg"
+        alt="Grian's Base" width="600">
+    </li>
+    <li>
+        <h2>Belonging to <em>Your's Truly</em>, my Eggfleet Base!</h2>
+        <img src="myBase.png"
+        alt="My Base" width="600">
+
+    </li>
 </ol>
 
-<p>Ok, so just a top 5. I was starting to get bored, and if I'm the one writing this, I don't want to imagine what it's doing to <em>you</em>.</p>
-<p>Still though, I think you get the point.You've heard of Minecraft before, you've seen the articles, your friends talk about it, maybe you even play it yourself. I don't think I need to use ridiculous clickbait like</p>
-<h2><b>10 REASONS MINECRAFT IS OUT OF THIS WORLD!!!1! YOU WONT BELIEVE NUMBER 6</b></h2>
-<p>and you read it, and you <em>do</em> believe that a cheap game with free updates and low requirements would be popular amongst those with not that much money to spend on games.</p>
-<p>We don't need that kind of <a href='https://www.buzzfeed.com/'>distasteful trash</a> in our midst. *cough* *cough*</p>
-<p>As far as my story with Minecraft goes, it's pretty run of the mill. I watched the Minecraft Youtubers, played in a multiplayer server with my friends, and I tried learning redstone from tutorials I couldn't keep up with.</p>
-<p>I feel quite satisfied with what I have been able to accomplish. I have built <a href="https://en.wikipedia.org/wiki/Maya_civilization#/media/File:Chichen_Itza_3.jpg">a Mayan pyramid</a>, and an <a href="https://www.models-resource.com/pc_computer/sonicheroes/model/1813/">eggfleet ship</a> from Sonic the Hedgehog.</p>
-<p>I don't yet know how to put an image in here, but as soon as I do, I'll upload pictures of my builds. They're fantastic!</p>
+
 </body>
-</html>
