--- a/week02/index.html
+++ b/week02/index.html
@@ -23,6 +23,12 @@ If you're all caught up, we can get to enjoying!</p>
         alt="My Base" width="600">
 
     </li>
+    <li>
+        <h2>Predators Meet Mayans Pyramid</h2>
+        <img src="fake.website/afijosknhoga94u8ghadkgjoias"
+        alt="Mayans & Predators Pyramid">
+    </li>
+    <p>Ok, so maybe I lost the files for that build. But trust me, it was awesome. Mayan stone gray and jungle green mixed with Predator alien tech green and spaceship gray? It was <em>*Cheff's kiss*</em> perfect.</p>
 </ol>
 
 
