Changed Names and Links to Properly Reflect Assignment

--- a/week02/index.html
+++ b/week02/index.html
@@ -4,7 +4,7 @@
     <h1>Here are some examples of <em>cool</em> Minecraft builds!</h1>
 </head>
 <body>
-<p>Before we begin, let's make sure you'd be able to <a href="index.html">appreciate these builds.</a>
+<p>Before we begin, let's make sure you'd be able to <a href="coding101.html">appreciate these builds.</a>
 If you're all caught up, we can get to enjoying!</p>
 <ol>
     <li>
