Updating my Website

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
-<!DOCTYPE hmtl>
+<!doctype html>
 <html>
- <body>
-   
-   <h3> First Heading </h3>
-  <p>Hellow World! I'm <em>freezing</em> in <b> Dallas.</b></p>
-   <p> This room was a bit on the warm side. The <em>really</em> warm side. I <b> could not</b> believe it, but it's better today.</p>
-   <p> When I press the "." key, it opens the editor. Convenient tool.</p>
-   <p> I'm not sure how many sentences count as a paragraph, but my English teachers in high school asked for at least 5 sentences.</p>
-   <p> 5 Sentences isn't <em>that much</em> anyways.</p>
-   <p> In fact, I'll do two more; this one, <em>and...</em></p>
-   <p> <em><b>A DUCK WALKED UP TO A LEMONADE STAND, AND HE SAID TO THE MAN RUNNING THE STAND</b></em></p>
-   <a href="https://www.youtube.com/watch?v=MtN1YnoL46Q">For Reference</a>
-  </body>
-</html>
+   <head>
+      <meta charset="utf-8">
+      <title>CSS Designer</title>
+      <link href="styles.css" rel="stylesheet" type="text/css" />
+   </head>
+   <body>
+       <ol>
+           <li><a href="week01/index.html">week01</a></li>
+           <li><a href="week02/index.html">week02</a></li>
+           <li><a href="week03/index.html">week03</a></li>
+           <li><a href="week04/index.html">week04</a></li>
+           <li><a href="week05/index.html">week05</a></li>
+           <li><a href="week06/index.html">week06</a></li>
+           <li><a href="week07/index.html">week07</a></li>
+           <li><a href="week08/index.html">week08</a></li>
+
+       </ol>
+   </body>
