--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <link href="styles.css" rel="stylesheet" type="text/css" />
    </head>
    <body>
+     <h1>Welcome to my Web Design Page!</h1>
        <ol>
            <li><a href="week01/index.html">week01</a></li>
            <li><a href="week02/index.html">week02</a></li>
