--- a/index.html
+++ b/index.html
@@ -6,16 +6,28 @@
       <link href="styles.css" rel="stylesheet" type="text/css" />
    </head>
    <body>
-     <h1>Welcome to my Web Design Page!</h1>
+     <header>
+         <h1>Welcome to my Web Design Page!</h1>
+         <hr>
+    </header>
+    <nav>
        <ol>
-           <li><a href="week01/index.html">week01</a></li>
-           <li><a href="week02/index.html">week02</a></li>
-           <li><a href="week03/index.html">week03</a></li>
-           <li><a href="week04/index.html">week04</a></li>
-           <li><a href="week05/index.html">week05</a></li>
-           <li><a href="week06/index.html">week06</a></li>
-           <li><a href="week07/index.html">week07</a></li>
-           <li><a href="week08/index.html">week08</a></li>
-
+           <li><a href="week01/index.html">Week 01</a>
+            <img src="nyancat.gif" width="45px"></img></li>
+           <li><a href="week02/index.html">Week 02</a>
+            <img src="nyancat.gif" width="45px"></img></li>
+           <li><a href="week03/index.html">Week 03</a>
+            <img src="nyancat.gif" width="45px"></img></li>
+           <li><a href="week04/index.html">Week 04</a>
+            <img src="nyancat.gif" width="45px"></img></li>
+           <li><a href="week05/index.html">Week 05</a>
+            <img src="nyancat.gif" width="45px"></img></li>
+           <li><a href="week06/index.html">Week 06</a>
+            <img src="nyancat.gif" width="45px"></img></li>
+           <li><a href="week07/index.html">Week 07</a>
+            <img src="nyancat.gif" width="45px"></img></li>
+           <li><a href="week08/index.html">Week 08</a>
+            <img src="nyancat.gif" width="45px"></img></li>
        </ol>
+    </nav>
    </body>
