--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
          <h1>Welcome to my Web Design Page!</h1>
          <hr>
     </header>
-    <nav>
-       <ol>
+    <div class="toDo">
+    <nav class="assignments">
+       <h3 class="assignmentsHeader">Assignments</h3>
+      
+       <ol class="nyanCatWebClass">
            <li><a href="week01/index.html">Week 01</a>
             <img src="nyancat.gif" width="45px"></img></li>
            <li><a href="week02/index.html">Week 02</a>
@@ -30,4 +33,25 @@
             <img src="nyancat.gif" width="45px"></img></li>
        </ol>
     </nav>
+    <nav class="challenges">
+       <h3 class="assignmentsHeader">Challenges</h3>
+       <ol class="challengesList">
+          <li class="completedChallenge challengesLi">Make a more usable main page.</li>
+          <li class="challengesLi">Learn about elements and their attributes.</li>
+          <li class="challengesLi">Challenge three.</li>
+       </ol>
+      </nav>
+   </div>
+    <p class="testClassParagraph">
+       This is a class test. Classes are added to an element with the syntax "class= "" " and the name of the class you'd like to use. You can use multiple classes in the same instance - just separate them with a space.
+    </p>
+    <p>
+       This paragraph has no class with a specified style, so it uses default values for style.</style>
+    </p>
+
+    <div class="box">
+       The margin is the space between the a box and other content.
+       The padding is the space between the border and the content in a given box (such as a div).</div>
+    </div>
+    
    </body>
