--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
        <ol class="challengesList">
           <li class="completedChallenge challengesLi">Make a more usable main page.</li>
           <li class="challengesLi">Learn about elements and their attributes.</li>
-          <li class="challengesLi">Find more challenges, ig?</li>
+          <li class="challengesLi"><a href="challenges/toDoList.html">To-Do List App</a></li>
        </ol>
       </nav>
    </div>
