--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <li class="completedChallenge challengesLi">Make a more usable main page.</li>
           <li class="challengesLi">Learn about elements and their attributes.</li>
           <li class="challengesLi"><a href="challenges/toDoList.html">To-Do List App</a></li>
+          <li class="challengesLi">Add a direct link to github repos (not just the assignments).</li>
        </ol>
       </nav>
    </div>
