--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
       
        <ol class="nyanCatWebClass">
            <li><a href="week01/index.html">Week 01</a><a href="https://github.com/FelixWolfBlue/Spring2022/tree/main/week01"><img src="github.png" height = 20px;></a>
-            <img src="nyancat.gif" width="45px"></img></li>
+            <img src="nyancat.gif" height="20px"></img></li>
            <li><a href="week02/index.html">Week 02</a><a href="https://github.com/FelixWolfBlue/Spring2022/tree/main/week02"><img src="github.png" height = 20px;></a>
-            <img src="nyancat.gif" width="45px"></img></li>
+            <img src="nyancat.gif" height="20px"></img></li>
            <li><a href="week03/index.html">Week 03</a><a href="https://github.com/FelixWolfBlue/Spring2022/tree/main/week03"><img src="github.png" height = 20px;></a>
-            <img src="nyancat.gif" width="45px"></img></li>
+            <img src="nyancat.gif" height="20px"></img></li>
            <li><a href="week04/index.html">Week 04</a><a href="https://github.com/FelixWolfBlue/Spring2022/tree/main/week04"><img src="github.png" height = 20px;></a>
-            <img src="nyancat.gif" width="45px"></img></li>
+            <img src="nyancat.gif" height="20px"></img></li>
            <li><a href="week05/index.html">Week 05</a><a href="https://github.com/FelixWolfBlue/Spring2022/tree/main/week05"><img src="github.png" height = 20px;></a>
-            <img src="nyancat.gif" width="45px"></img></li>
+            <img src="nyancat.gif" height="20px"></img></li>
            <li><a href="week06/index.html">Week 06</a><a href="https://github.com/FelixWolfBlue/Spring2022/tree/main/week06"><img src="github.png" height = 20px;></a>
-            <img src="nyancat.gif" width="45px"></img></li>
+            <img src="nyancat.gif" height="20px"></img></li>
            <li><a href="week07/index.html">Week 07</a><a href="https://github.com/FelixWolfBlue/Spring2022/tree/main/week07"><img src="github.png" height = 20px;></a>
-            <img src="nyancat.gif" width="45px"></img></li>
+            <img src="nyancat.gif" height="20px"></img></li>
            <li><a href="week08/index.html">Week 08</a><a href="https://github.com/FelixWolfBlue/Spring2022/tree/main/week08"><img src="github.png" height = 20px;></a>
-            <img src="nyancat.gif" width="45px"></img></li>
+            <img src="nyancat.gif" height="20px"></img></li>
        </ol>
     </nav>
     <nav class="challenges">
