--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
     <div class="toDo">
     <nav class="assignments">
+       <div class="boxList">
        <h3 class="assignmentsHeader">Assignments</h3>
       
        <ol class="nyanCatWebClass">
@@ -32,15 +33,19 @@
            <li><a href="week08/index.html">Week 08</a><a href="https://github.com/FelixWolfBlue/Spring2022/tree/main/week08"><img src="github.png" height = 20px;></a>
             <img src="nyancat.gif" height="20px"></img></li>
        </ol>
+      </div>
     </nav>
     <nav class="challenges">
+       <div class="boxList">
        <h3 class="assignmentsHeader">Challenges</h3>
        <ol class="challengesList">
           <li class="completedChallenge challengesLi">Make a more usable main page.</li>
           <li class="challengesLi">Learn about elements and their attributes.</li>
           <li class="challengesLi"><a href="challenges/toDoList.html">To-Do List App</a></li>
-          <li class="completedChallenge">Add a direct link to github repos (not just the assignments).</li>
+          <li class="completedChallenge">Add direct repo links w/ github logo.</li>
+          <li class="challengesLi"><a href="challenges/bandFanSite/index.html">Make a Fan Site</a></li>
        </ol>
+      </div>
       </nav>
    </div>
     <p class="testClassParagraph">
