--- a/week04/paperPlanes.html
+++ b/week04/paperPlanes.html
@@ -4,18 +4,71 @@
      Date: 2/10/22
      Section: ITSE-1411
 
-     Basic Webpage Showing you how to make a paper plane.
+     Teaches how to make a paper plane!
 -->
 
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="OrigamiStyles.css">
-    <title>Let's make a paper plane!</title>
-
+    <link rel="stylesheet" href="origamiStyles.css">
+    <title>Let's Make Paper Airplanes!</title>
   </head>
   <body>
+    <header>Origami Airplanes - A Tutorial by Ichirou Yukimura</header>
+    
+    <article class="introduction content">
+        <img class="contentImg planeImg" src="basicPaperPlaneComplete.png">
+        <p>The steps to take when making a paper airplane are fairly simple. Anybody can make a paper airplane so long as you have a sheet of paper and some time. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, culpa accusamus vitae sit facilis, id optio odit distinctio iure ratione assumenda dicta natus voluptatum in corrupti reiciendis consectetur veniam unde eos sapiente, ut doloremque velit vel! Nulla voluptatum consequuntur aperiam porro dolore, dicta a, odio saepe recusandae molestiae dolores ipsa.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, sapiente quod minus vero tempora, et modi magni, minima itaque consequatur ab explicabo. Ut minus, vero vitae necessitatibus labore vel nisi iste quod, soluta, ea porro harum quidem excepturi blanditiis id placeat distinctio quae esse officiis. Placeat nulla commodi laborum maiores?</p>
+    </article>    
+    <div class="materials content">
+        <h4>
+            Now let's go over what we'll need for our paper plane!
+        </h4>
+        <ul>
+            <li>Paper</li>
+            <li>Two hands</li>
+            <li>And creativity!</li>
+        </ul>
+        <p>It really is that simple! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus fuga commodi atque dignissimos recusandae voluptatem aspernatur, cum sunt facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure perspiciatis asperiores, in quisquam vero voluptas ex, nemo est et at reprehenderit aliquam dolorem facere, corporis architecto temporibus debitis vitae commodi? Accusantium delectus ea dignissimos culpa sunt praesentium. Nesciunt numquam sed eligendi ipsum sint quasi delectus in, ad qui odio excepturi esse ipsam culpa quas neque eos molestiae assumenda cumque inventore! Tempora debitis accusamus quasi aliquam porro ducimus hic repellendus, asperiores velit est voluptate ipsam odit saepe tenetur sed aliquid perspiciatis vitae repellat magni fuga. Reprehenderit cum sed dicta, iure, dolorem doloribus tempora voluptas voluptatibus eum labore tenetur quaerat ut et?</p>
+    </div>
 
-    <p>Test</p>
+    <aside class="history content">
+        <h4>What's the history behind paper airplanes?</h4>
+        <hr>
+        <p>Paper airplanes (originally called origami airplanes) were a Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, modi eaque illum optio dolor magni consequuntur nostrum voluptates aut minima ea vero pariatur porro rem esse labore. Quasi, deleniti illum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id debitis dolore a nemo, consequatur molestiae beatae est quibusdam cum iusto incidunt quo obcaecati quisquam similique facilis, ipsum neque distinctio, perspiciatis nam vitae. Nisi facilis impedit est at laudantium eveniet. Ex aperiam dolorem non doloremque in officiis illum odio enim voluptatibus error est deleniti similique minima maxime accusamus totam, distinctio, exercitationem vitae! Repellat earum inventore facere ut rem suscipit possimus vero unde deleniti atque! Dolore ullam quis id consectetur sunt! Fugit nisi molestiae amet, porro aliquid, minima nihil quod quia dolores quos, culpa iure fugiat? Aliquid nam quia ad, qui quaerat optio velit debitis nemo rem molestias temporibus ab accusantium nihil quasi sed ducimus laudantium et blanditiis. Architecto hic quod, minima saepe ea earum id pariatur debitis illo repellendus. Debitis tempore dolores, nostrum quibusdam error atque optio? Sequi consectetur totam, facere adipisci obcaecati eius illo nemo iusto laborum, earum amet! Mollitia, quis facere ipsam beatae quas rerum inventore eveniet illum delectus numquam cupiditate pariatur asperiores animi tempora saepe cumque, enim alias eius porro a suscipit. Veniam at, non nostrum voluptatum, obcaecati rem optio omnis eligendi velit ipsa consequatur perferendis vel soluta delectus aspernatur qui consectetur aut. Voluptatem aut in soluta mollitia.</p>
+    </aside>
+
+    <section class="instructions content">
+        <h3>Are you ready? Let's begin!</h3>
+        <p class="accessible">If you need bigger versions of these images, click on them to open them in full size.</p>
+        <nav>
+            <ol>
+                <a href="plane1.png"><img src="plane1.png"></a>
+                <li>Fold the paper in half vertically.</li>
+                <a href="plane2.png"><img src="plane2.png"></a>
+                <li>Unfold the paper and fold the top corners towards the center.</li>
+                <a href="plane3.png"><img src="plane3.png"></a>
+                <li>Fold the edges along the center line.</li>
+                <a href="plane4.png"><img src="plane4.png"></a>
+                <li>Fold the plane in half towards you.</li>
+                <a href="plane5.png"><img src="plane5.png"></a>
+                <li>Fold the wings down, matching the edges on the top with the edges on the bottom.</li>
+                <a href="plane6.png"><img src="plane6.png"></a>
+                <li>Use glue or tape on the inside to avoid unfolding mid-flight.</li>
+
+            </ol>
+        </nav>
+    </section>
+
+    
+
+    <footer class="footer content">
+        <hr>
+        <h4>If you liked this content, consider following us on Twitter and Instagram!</h4>
+        <a href="https:/twitter.com"><img src="twitter.png"></a>
+        <a href="https:/instagram.com"><img src="instagram.png"></a>
+    </footer>
 
   </body>
