--- a/week04/paperPlanes.html
+++ b/week04/paperPlanes.html
@@ -62,13 +62,11 @@
         </nav>
     </section>
 
-    
-
     <footer class="footer content">
         <hr>
         <h4>If you liked this content, consider following us on Twitter and Instagram!</h4>
-        <a href="https:/twitter.com"><img src="twitter.png"></a>
-        <a href="https:/instagram.com"><img src="instagram.png"></a>
+        <a href="https://www.twitter.com"><img src="twitter.png"></a>
+        <a href="https://www.instagram.com"><img src="instagram.png"></a>
     </footer>
 
   </body>
