--- a/week04/paperPlanes.html
+++ b/week04/paperPlanes.html
@@ -62,6 +62,10 @@
         </nav>
     </section>
 
+    <article class="content">
+      <p>And you're done! Go have fun with your newly built paper airplane! Hopefully you learned something new today! :)</p>
+    </article>
+
     <footer class="footer content">
         <hr>
         <h4>If you liked this content, consider following us on Twitter and Instagram!</h4>
