--- a/week04/paperPlanes.html
+++ b/week04/paperPlanes.html
@@ -62,9 +62,11 @@
         </nav>
     </section>
 
-    <article class="content">
-      <p>And you're done! Go have fun with your newly built paper airplane! Hopefully you learned something new today! :)</p>
-    </article>
+    <article class="ending content">
+      <p>And you're done! Go have some fun! </p> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur itaque cumque debitis, est ex autem esse mollitia dolorem obcaecati ullam.</p>
+      <img class="planeImg" src="planeComplete.jpg">
+
+  </article>
 
     <footer class="footer content">
         <hr>
