--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <li class="challengesLi"><a href="challenges/toDoList.html">To-Do List App</a></li>
           <li class="completedChallenge">Add direct repo links w/ github logo.</li>
           <li class="challengesLi"><a href="challenges/bandFanSite/index.html">Make a Fan Site</a></li>
+          <li class="challengesLi"><a href="challenges/koreanLearning.html">Learning Korean Website</a> </li>
        </ol>
       </div>
       </nav>
