--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        <ol class="challengesList">
           <li class="completedChallenge challengesLi">Make a more usable main page.</li>
           <li class="challengesLi">Learn about elements and their attributes.</li>
-          <li class="challengesLi"><a href="challenges/toDoList.html">To-Do List App</a></li>
+          <li class="challengesLi"><a href="challenges/toDoList/toDolist.html">To-Do List App</a></li>
           <li class="completedChallenge">Add direct repo links w/ github logo.</li>
           <li class="challengesLi"><a href="challenges/bandFanSite/index.html">Make a Fan Site</a></li>
           <li class="challengesLi"><a href="challenges/koreanLearning.html">Learning Korean Website</a> </li>
