--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li class="challengesLi">Learn about elements and their attributes.</li>
           <li class="challengesLi"><a href="challenges/toDoList/toDolist.html">To-Do List App</a></li>
           <li class="completedChallenge">Add direct repo links w/ github logo.</li>
-          <li class="challengesLi"><a href="challenges/bandFanSite/index.html">Make a Fan Site</a></li>
+          <li class="challengesLi"><a href="challenges/MiW/index.html">Make a Fan Site</a></li>
           <li class="challengesLi"><a href="challenges/koreanLearning.html">Learning Korean Website</a> </li>
        </ol>
       </div>
