--- a/challenges/koreanLearning/koreanLearning.html
+++ b/challenges/koreanLearning/koreanLearning.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="koreanStyles.css">
-    <title>Let's Make Paper Airplanes!</title>
+    <title>Let's Learn Korean!</title>
   </head>
   <body>
       <header><h1>한국어 배우죠!</h1></header>
