--- a/challenges/koreanLearning/koreanLearning.html
+++ b/challenges/koreanLearning/koreanLearning.html
@@ -10,5 +10,12 @@
       <header><h1>한국어 배우죠!</h1></header>
       <p>오늘의 단어는: </p>
       <p>오늘의 문법은: </p>
+    <ul>
+      <li><div id="lesson1-id"></div></li>
+      <li><div id="lesson2-id"></div></li>
+      <li><div id="lesson3-id"></div></li>
+      <li><div id="lesson4-id"></div></li>
+    </ul>
+      <script src="script.js"></script>
   </body>
 </html>
