updated alert function

--- a/week05/javascript.html
+++ b/week05/javascript.html
@@ -7,7 +7,7 @@
             }
         </script>
     </head>
-    <body onload="showAlert">
+    <body onload="showAlert()">
         <p>Today is it?</p>
     </body>
 </html>
