--- a/week05/javascript.html
+++ b/week05/javascript.html
@@ -9,5 +9,6 @@
     </head>
     <body onload="showAlert()">
         <p>Today is it?</p>
+        <button id="button">Hello World</button>
     </body>
 </html>
