--- a/week05/javascript.html
+++ b/week05/javascript.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="script.js"></script>
         <script>
             function showAlert(){
                 alert("Hello World");
@@ -9,6 +10,6 @@
     </head>
     <body onload="showAlert()">
         <p>Today is it?</p>
-        <button id="button">Hello World</button>
+        <button id="button">Click Me</button>
     </body>
 </html>
