--- a/week05/javascript.html
+++ b/week05/javascript.html
@@ -3,6 +3,7 @@
     <head>
         <script src="script.js"></script>
         <script>
+            var websiteAlert = "Hello World";
             function showAlert(){
                 alert("Hello World");
             }
@@ -10,6 +11,6 @@
     </head>
     <body onload="showAlert()">
         <p>Today is it?</p>
-        <button id="button">Click Me</button>
+        <button onclick="showAlert()">Show Alert</button>
     </body>
 </html>
