--- a/week05/javascript.html
+++ b/week05/javascript.html
@@ -8,6 +8,20 @@
                 alert("Hello World");
             }
         </script>
+        <style>
+            button{
+                font-size: 1em;
+                background-color: #e8f5ff;
+                color:#4312ae;
+                border: 2px solid black;
+                box-shadow 4px 4px 4px #999999;
+            }
+            button:hover, button:focus, button:active{
+                color:e8f5ff;
+                background-color: #ebf5ff;
+                cursor:pointer;
+            }
+        </style>
     </head>
     <body onload="showAlert()">
         <p>Today is it?</p>
