added mainpage link

--- a/week05/events.html
+++ b/week05/events.html
@@ -20,6 +20,9 @@
         <script>onload(myFunction())</script>
         <script>myVar = "Button has been clicked"</script>
         <button onclick="myFunction()">myButton</button>
+        <div>
+            <a href="index.html">Back to main page.</a>
+        </div>
         
     </body>
 </html>
